# oracle

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_FINAL.md  DEVELOPMENT_SUMMARY.md  EXECUTION_PLAN.md  FRAME_BRIDGE.md  IMPLEMENTATION.md  INDEX.md  MENTAL_MODEL.md  PROJECT_STATUS.md  QUICK_START.md  README.md  ROADMAP.md  SESSION_SUMMARY.md  SETUP_MAC.sh  STREAMING_READY.md  VISUAL_GUIDE.md  dedbug-serial.py  setup.sh
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: bg_btn_cyan.xml  bg_card_cyan.xml  bg_code.xml  bg_status_pill.xml
app/: package-lock.json
backend/: .env.example  README.md  middleware.ts  package.json  vercel.json
backend/app/api/latest-frame/: route.ts
backend/app/api/latest-frame/self/: route.ts
backend/app/api/login/: route.ts
backend/app/api/upload-frame/: route.ts
backend/lib/: jwt.ts  storage.ts  users.ts
bridge/: package-lock.json  package.json  server.js
config/: oracle.example.json
electron/: main.js  package.json  preload.js
electron/renderer/: index.html  renderer.js  styles.css
mac/: package.json  tauri.conf.json
mac/src/: index.html
mac/src-tauri/: Cargo.toml
mac/src-tauri/src/: lib.rs  main.rs
mobile/: App.js  README.md  app.json  package-lock.json  package.json
mobile/screens/: LoginScreen.js  StreamScreen.js
mobile/services/: auth.js
packaging/: README.md  homebrew_formula.rb  install.sh  oracle-setup  oracle-widget
widget/: README.md  index.jsx  simple.jsx
widget/oracle.widget/: index.jsx
(+11 files in other folders)
